[gd_scene load_steps=27 format=2]

[ext_resource path="res://characters/DarkMage/assets/Dark_mage.png" type="Texture" id=1]
[ext_resource path="res://characters/DarkMage/DarkMage.gd" type="Script" id=2]
[ext_resource path="res://Sounds/hurt4k.wav" type="AudioStream" id=3]
[ext_resource path="res://characters/DarkMage/assets/Dark_Foxdeer.png" type="Texture" id=4]
[ext_resource path="res://Sounds/witchspell2.wav" type="AudioStream" id=5]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_2D.gd" type="Script" id=6]
[ext_resource path="res://Sounds/hurt4dm.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/dmshot2.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/hurt1dm.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/hurt3dm.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/hurt2dm.wav" type="AudioStream" id=11]
[ext_resource path="res://Sounds/dmshot1.wav" type="AudioStream" id=12]
[ext_resource path="res://Sounds/hurt5dm.wav" type="AudioStream" id=13]
[ext_resource path="res://Sounds/dmshot3.wav" type="AudioStream" id=14]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.0

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="DarkMage" type="Area2D" groups=[
"Enemy",
]]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "Walk"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="Animal" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 12 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
script = ExtResource( 6 )
streams = [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 13 ) ]
random_strategy = 1

[node name="ShootTimer" type="Timer" parent="."]

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
script = ExtResource( 6 )
streams = [ ExtResource( 12 ), ExtResource( 8 ), ExtResource( 14 ) ]
random_strategy = 1

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
